cmake_minimum_required(VERSION 3.14)
project(onnx_to_trt)
set(CMAKE_CXX_STANDARD 14)
include_directories(../common)
include_directories(/home/ubuntu/TensorRT-6.0.1.5/include)
include_directories(/usr/local/cuda-9.0/include)

file(GLOB Sources *.cpp)
file(GLOB Includes *.h)
add_executable(onnx_mnist ${Sources} ${Includes})
